--- a/app/frontend/src/App.css
+++ b/app/frontend/src/App.css
@@ -1,6 +1,10 @@
+@import "normalize.css";
+@import "@blueprintjs/core/lib/css/blueprint.css";
+@import "@blueprintjs/icons/lib/css/blueprint-icons.css";
+
 .App {
-  background-color: #1a1a1a; /* Dark gray background */
-  color: rgb(255, 255, 255); /* White text color */
+  /* color: rgb(255, 255, 255); /* White text color */
+  color: #1C2127;
   font-family: 'Karma', serif;
   height: 100vh; /* Full height of the viewport */
   flex-direction: column;
